# Top100BestCoffeeShops

./: .gitignore  PRD.md  README.md  implementation_plan.md  main.py  pyproject.toml
.github/workflows/: update.yml  update_map.yml
claude_prompts/: phase1.md  phase2.md  phase3.md  phase4.md
data/: current_list.json
docs/: development-framework.md  release-timeline-2026.md
docs/plans/: 2026-02-17-project-summary.md
output/: coffee_shops.csv  coffee_shops.kml  geocode missing report.csv  south america coffee shops address missing.csv  south america coffee shops address.csv  top 100 coffee shops address.csv
scripts/: dev-framework.sh
site/: index.html
site/assets/: style.css
src/: __init__.py  address_scraper.py  category_utils.py  country_centroids.py  env_utils.py  generator.py  geocoder.py  main.py  models.py  scraper.py  site_builder.py  state.py  web_app.py
templates/: index.html
tests/: conftest.py  test_address_scraper.py  test_country_centroids.py  test_data_quality.py  test_generator.py  test_generator_csv.py  test_geocoder.py  test_main_geocode_persistence.py  test_main_orchestration.py  test_normalization.py  test_scraper.py  test_scraper_integration.py  test_site_builder.py  test_state.py  test_web_app.py
