[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-map-auto-sync"
version = "0.1.0"
description = "Scrape top coffee shops and generate Google My Maps import artifacts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "uvicorn>=0.30.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
